# shortwave-station-list-sdrpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_link.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  distance.h  main.cpp  remotes.cpp  remotes.h  settings.cpp  settings.h  station.h  utc.cpp  utc.h
